# pytermstreamxz

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: bindings.cpp
test/: repository.texz  test.py  test_seek.py
