[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0", "cmake>=3.14", "pybind11[global]"]
build-backend = "setuptools.build_meta"

[project]
name = "pytermstreamxz"
version = "0.1.0"
description = "Python bindings for termstreamxz - Terminal and byte stream processing library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Keiblinger", email = "mike@primeintellect.ai"},
]
maintainers = [
    {name = "Michael Keiblinger", email = "mike@primeintellect.ai"},
]
keywords = ["terminal", "stream", "processing", "bindings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Terminals",
]
requires-python = ">=3.8"
dependencies = []